--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.5",
+    "aes256": "^1.1.0",
     "bcrypt": "^5.0.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
